[gd_scene load_steps=7 format=2]

[ext_resource path="res://matchmaking/lobby/lobby.gd" type="Script" id=1]
[ext_resource path="res://matchmaking/lobby/faction_column.tscn" type="PackedScene" id=2]
[ext_resource path="res://matchmaking/lobby/section_columns.gd" type="Script" id=3]
[ext_resource path="res://themes/theme_u_main.tres" type="Theme" id=4]
[ext_resource path="res://matchmaking/lobby/game_settings.gd" type="Script" id=5]
[ext_resource path="res://gui/utils/button_click_sound_utils.gd" type="Script" id=6]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.00333, 0.997021 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Body" type="HBoxContainer" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1.00207, 1 )
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="GUI/Body"]
margin_right = 30.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.02

[node name="GameSettings" type="VBoxContainer" parent="GUI/Body"]
margin_left = 34.0
margin_right = 321.0
margin_bottom = 1080.0
alignment = 1
script = ExtResource( 5 )

[node name="PanelContainer" type="PanelContainer" parent="GUI/Body/GameSettings"]
margin_top = 428.0
margin_right = 287.0
margin_bottom = 651.0
rect_min_size = Vector2( 150, 0 )

[node name="MarginContainer" type="MarginContainer" parent="GUI/Body/GameSettings/PanelContainer"]
margin_left = 3.0
margin_top = 2.0
margin_right = 284.0
margin_bottom = 221.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="GameSettings" type="VBoxContainer" parent="GUI/Body/GameSettings/PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 276.0
margin_bottom = 214.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="GUI/Body/GameSettings/PanelContainer/MarginContainer/GameSettings"]
margin_right = 271.0
margin_bottom = 19.0
text = "lobby.game_settings"
align = 1

[node name="HSeparator" type="HSeparator" parent="GUI/Body/GameSettings/PanelContainer/MarginContainer/GameSettings"]
margin_top = 49.0
margin_right = 271.0
margin_bottom = 53.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Size" type="VBoxContainer" parent="GUI/Body/GameSettings/PanelContainer/MarginContainer/GameSettings"]
margin_top = 83.0
margin_right = 271.0
margin_bottom = 131.0

[node name="Label" type="Label" parent="GUI/Body/GameSettings/PanelContainer/MarginContainer/GameSettings/Size"]
margin_right = 271.0
margin_bottom = 19.0
text = "lobby.game_settings.size"
align = 1

[node name="OptionButton" type="OptionButton" parent="GUI/Body/GameSettings/PanelContainer/MarginContainer/GameSettings/Size"]
margin_top = 23.0
margin_right = 271.0
margin_bottom = 48.0
disabled = true
text = "lobby.game_settings.size.very_small"
align = 1
items = [ "lobby.game_settings.size.very_small", null, false, 0, null, "lobby.game_settings.size.small", null, false, 1, null, "lobby.game_settings.size.medium", null, false, 2, null, "lobby.game_settings.size.large", null, false, 3, null, "lobby.game_settings.size.very_large", null, false, 4, null ]
selected = 0

[node name="Speed" type="VBoxContainer" parent="GUI/Body/GameSettings/PanelContainer/MarginContainer/GameSettings"]
margin_top = 161.0
margin_right = 271.0
margin_bottom = 209.0

[node name="Label" type="Label" parent="GUI/Body/GameSettings/PanelContainer/MarginContainer/GameSettings/Speed"]
margin_right = 271.0
margin_bottom = 19.0
text = "lobby.game_settings.speed"
align = 1

[node name="OptionButton" type="OptionButton" parent="GUI/Body/GameSettings/PanelContainer/MarginContainer/GameSettings/Speed"]
margin_top = 23.0
margin_right = 271.0
margin_bottom = 48.0
disabled = true
text = "lobby.game_settings.speed.slow"
align = 1
items = [ "lobby.game_settings.speed.slow", null, false, 0, null, "lobby.game_settings.speed.medium", null, false, 1, null, "lobby.game_settings.speed.fast", null, false, 2, null ]
selected = 0

[node name="Control3" type="Control" parent="GUI/Body"]
margin_left = 325.0
margin_right = 355.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.02

[node name="BodyFaction" type="VBoxContainer" parent="GUI/Body"]
margin_left = 359.0
margin_right = 1884.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="HBoxContainer" parent="GUI/Body/BodyFaction"]
margin_right = 1525.0
margin_bottom = 267.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
alignment = 1

[node name="Name" type="Label" parent="GUI/Body/BodyFaction/Header"]
margin_left = 762.0
margin_top = 124.0
margin_right = 762.0
margin_bottom = 143.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Section" type="HBoxContainer" parent="GUI/Body/BodyFaction"]
margin_top = 271.0
margin_right = 1525.0
margin_bottom = 377.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Players" type="VBoxContainer" parent="GUI/Body/BodyFaction/Section"]
margin_right = 1525.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SectionColumn" type="HBoxContainer" parent="GUI/Body/BodyFaction"]
margin_top = 381.0
margin_right = 1525.0
margin_bottom = 915.0
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="FactionColumn0" parent="GUI/Body/BodyFaction/SectionColumn" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 378.0
margin_bottom = 534.0

[node name="FactionColumn1" parent="GUI/Body/BodyFaction/SectionColumn" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 382.0
margin_right = 760.0
margin_bottom = 534.0
faction = 1

[node name="FactionColumn2" parent="GUI/Body/BodyFaction/SectionColumn" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 764.0
margin_right = 1142.0
margin_bottom = 534.0
faction = 2

[node name="FactionColumn3" parent="GUI/Body/BodyFaction/SectionColumn" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1146.0
margin_right = 1525.0
margin_bottom = 534.0
faction = 3

[node name="Footer" type="HBoxContainer" parent="GUI/Body/BodyFaction"]
margin_top = 919.0
margin_right = 1525.0
margin_bottom = 1080.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
theme = ExtResource( 4 )
alignment = 1

[node name="LaunchButton" type="Button" parent="GUI/Body/BodyFaction/Footer"]
visible = false
margin_left = 831.0
margin_top = 166.0
margin_right = 968.0
margin_bottom = 191.0
size_flags_vertical = 4
disabled = true
text = "menu.lobby.launch"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaveButton" type="Button" parent="GUI/Body/BodyFaction/Footer"]
margin_left = 704.0
margin_top = 68.0
margin_right = 821.0
margin_bottom = 93.0
size_flags_vertical = 4
text = "menu.lobby.quit"
script = ExtResource( 6 )

[node name="Control" type="Control" parent="GUI/Body"]
margin_left = 1888.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.02

[node name="HUD" type="CanvasLayer" parent="."]
layer = 2
